@@ -34,10 +34,9 @@ mpz_com (mpz_ptr dst, mpz_srcptr src)
 	 But this can be simplified using the identity -x = ~x + 1.
 	 So we're going to compute (~~x) + 1 = x + 1!  */
 
-      MPZ_REALLOC (dst, size + 1);
+      dst_ptr = MPZ_REALLOC (dst, size + 1);
 
       src_ptr = PTR (src);
-      dst_ptr = PTR (dst);
 
       if (UNLIKELY (size == 0))
 	{
@@ -68,10 +67,9 @@ mpz_com (mpz_ptr dst, mpz_srcptr src)
 	 So we're going to compute ~~(x - 1) = x - 1!  */
       size = -size;
 
-      MPZ_REALLOC (dst, size);
+      dst_ptr = MPZ_REALLOC (dst, size);
 
       src_ptr = PTR (src);
-      dst_ptr = PTR (dst);
 
       mpn_sub_1 (dst_ptr, src_ptr, size, (mp_limb_t) 1);
       size -= dst_ptr[size - 1] == 0;
